@@ -86,7 +86,7 @@ public final class GraciaLoader
 		{
 			try
 			{
-				script.newInstance();
+				script.getDeclaredConstructor().newInstance();
 			}
 			catch (Exception e)
 			{
